--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,30 +1,55 @@
 name: CI CD for BrewBuddies App
 
+name: CI
 on:
-    push:
-        branches:
-            - master
+  pull_request:
+    branches:
+      - master
 
-jobs:
-    build:
-        runs-on: ubuntu-latest
+# jobs:
+#   flutter_test:
+#     name: Run flutter test and analyze
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: actions/setup-java@v1
+#         with:
+#           java-version: "12.x"
+#       - uses: subosito/flutter-action@v1
+#         with:
+#           channel: "stable"
+#       - run: flutter pub get
+#       - run: flutter analyze
+#       - run: flutter test
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v2
-              
+  build_ios:
+    name: Build Flutter (iOS)
+    # needs: [flutter_test]
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+      - run: flutter pub get
+      - run: flutter clean
+      - run: flutter build ios --release --no-codesign
 
-            - name: Setup Flutter
-              uses: subosito/flutter-action@v1
-              with:
-                flutter-version: 'stable'
-
-            - name: Install dependencies
-              run: flutter pub get
-
-
-            - name: Build APK
-              run: flutter build apk --relese
-
-            - name: Build IPA 
-              run: flutter build ios --release --no-codesign
+  build_apk:
+    name: Build Flutter (Android)
+    # needs: [flutter_test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: "12.x"
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+      - run: flutter pub get
+      - run: flutter clean
+      - run: flutter build apk
