--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -33,7 +33,7 @@ on:
           java-version: "12.x"
       - uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
+          flutter-version: "3.10.5"
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build ios --release --no-codesign
@@ -49,7 +49,7 @@ on:
           java-version: "12.x"
       - uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
+          flutter-version: "3.10.5"
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build apk
