--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -5,25 +5,9 @@ on:
     branches:
       - master
 
-# jobs:
-#   flutter_test:
-#     name: Run flutter test and analyze
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - uses: actions/setup-java@v1
-#         with:
-#           java-version: "12.x"
-#       - uses: subosito/flutter-action@v1
-#         with:
-#           channel: "stable"
-#       - run: flutter pub get
-#       - run: flutter analyze
-#       - run: flutter test
-
+jobs:
   build_ios:
     name: Build Flutter (iOS)
-    # needs: [flutter_test]
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
@@ -32,14 +16,13 @@ on:
           java-version: "12.x"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.10.5"
+          flutter-version: "3.10.5"  # Specify Flutter version here
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build ios --release --no-codesign
 
   build_apk:
     name: Build Flutter (Android)
-    # needs: [flutter_test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -48,7 +31,7 @@ on:
           java-version: "12.x"
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.10.5"
+          flutter-version: "3.10.5"  # Specify Flutter version here
       - run: flutter pub get
       - run: flutter clean
       - run: flutter build apk
